Fix <nav> alignment

--- a/style.css
+++ b/style.css
@@ -118,6 +118,9 @@ textarea {
 #sslcontact_form div:nth-last-child(2) {
 	padding-bottom: 32px;
 }
+nav {
+	text-align: left;
+}
 nav ul {
 	list-style: none;
 	display: inline;
